# simple_tip_estimator

./: pyproject.toml  requirements.txt  sleep_estimator.py  tip_estimator.py
