[tool.poetry]
name = "tip-estimator"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tip_estimator"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
numpy = "^1.24.3"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
